--- a/client/assets/styles/style.css
+++ b/client/assets/styles/style.css
@@ -179,8 +179,58 @@ time {
   border-radius: 5px;
 }
 
+.chat-container .users-container .online-users h2 {
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 18px;
+  color: white;
+  margin: 10px 10px 21px 10px;
+}
+
+.chat-container .users-container .online-users .list li {
+  color: white;
+  display: flex;
+  align-items: center;
+  margin-bottom: 7px;
+  padding: 2px;
+}
+
+.chat-container .users-container .online-users .list li:hover {
+  background-color: #151515;
+}
+
+.chat-container .users-container .online-users .list li::before {
+  content: '';
+  display: block;
+  height: 6px;
+  width: 6px;
+  border-radius: 100px;
+  margin-left: 10px;
+  margin-right: 6px;
+}
+
+.users-container .online-users .list li.online::before {
+  background-color: #45FF04;
+}
+
+.users-container .online-users .list li.away::before {
+  background-color: yellow;
+}
+
+.users-container .online-users .list li.busy::before {
+  background-color: red;
+}
+
 .chat-container .users-container .wrapper {
   margin: 0px 10px;
+}
+
+.chat-container .users-container .wrapper select {
+  width: 100%;
+  height: 30px;
+  border: none;
+  border-radius: 4px;
+  margin-top: 10px;
 }
 .chat-container .users-container h1 {
   color: white;
