--- a/client/assets/styles/style.css
+++ b/client/assets/styles/style.css
@@ -54,7 +54,6 @@ body {
 .chat-container {
   width: 100%;
   height: 100vh;
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -148,6 +147,7 @@ body {
   display: flex;
   align-items: center;
   color: #9e9e9e;
+  word-break: break-word;
 }
 
 .chat-container .messages > .wrapper > .message p {
@@ -165,6 +165,7 @@ body {
   padding-right: 3px;
   padding-bottom: 3px;
   margin-left: 10px;
+  width: 75px;
 }
 
 .chat-container .messages > .wrapper > .message > .info > span,
@@ -223,6 +224,32 @@ time {
 
 .chat-container .users-container .wrapper {
   margin: 0px 10px;
+}
+
+.chat-container .users-container .room-name h2 {
+  color: white;
+  font-size: 16px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.chat-container .users-container .room-name[data-selected=true] {
+  background-color: black;
+  position: relative;
+}
+
+.chat-container .users-container .room-name[data-selected=true]::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 7px;
+  right: -8px;
+  transform: rotate(45deg);
+  width: 15px;
+  height: 15px;
+  background-color: var(--chatBackgroundColor);
 }
 
 .chat-container .users-container .wrapper select {
